# COBOLtoPython

./: README.md  pyproject.toml
.github/workflows/: tests.yml
pycobol_bridge/: __init__.py  api.py  ast.py  binary_fields.py  cli.py  comp3.py  copybook.py  ebcdic.py  occurs.py  pandas_bridge.py  pyarrow_bridge.py  pydantic_models.py  redefines.py  schema_diff.py  streaming.py
rust/: README.md
tests/: test_comp3.py  test_copybook.py  test_ebcdic.py  test_fuzz.py
