[project]
name = "pycobol-bridge"
version = "0.1.0"
description = "Python interoperability toolkit for COBOL systems"
authors = [{name = "Christopher Maguire"}]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
